0.11
 [Common]
 - Add blank lines after arguments and before return.
 - Fix bugtracker.
 - Update copyright years.

0.10 2020-10-14T00:56:08+02:00
 [Common]
 - Add missing test messages.
 - Move t/dtd directory out. There is for testing of validation.

 [Tags::Output]
 - Add 'input_tags_item_callback' for processing before 'Tags' put().

 [Tags::Output::Raw]
 - Add 'input_tags_item_callback' for processing before 'Tags' put().
 - Sort modules in test.

0.09 2020-04-27T23:28:40+02:00
 [Tags::Output]
 - Add open_elements() method, deprecate open_tags() method with warning.

 [Tags::Output::Raw]
 - Add open_elements() method, deprecate open_tags() method with warning.
 - Fix issue with XML element in lowercase only.

0.08 2020-04-26T16:04:35+02:00
 [Common]
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Remove helper get_stdout.inc in tests.
 - Rename test files to better version (tag → element).
 - Update author github username.
 - Update copyright years.

0.07 2018-01-23T11:27:58+01:00
 [Common]
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Update Module::Install to 1.19 version.
 - Update author name.
 - Update copyright years.
 - Update examples/ directory.

0.06 2016-03-23T21:19:20+01:00
 [Tags::Output::Raw]
 - Add test comments.
 - Fix finalize() in SGML mode.
 - Simple optimalization.

0.05 2016-03-22T19:16:13+01:00
 [Common]
 - Update copyright years.
 - Rewrite test files to better names.

 [Tags::Output]
 - Add test comments.
 - Rewrite 'tag' to 'element' in tests.

 [Tags::Output::Raw]
 - Add some test comments.
 - Add test for end of element.
 - Fix sitution for end of element without begin of element in xml mode.
 - Rewrite 'tag' to 'element' in tests.

 [Tags::Utils::Preserve]
 - Rewrite 'tag' to 'element' in tests.

0.04 2015-10-27T12:39:38+01:00
 [Common]
 - Add cleaning of Error::Pure errors.
 - Add Test::NoWarnings to tests.
 - Fix tabs in code.
 - Fix tabs in doc.