@@ -9,7 +9,7 @@ use Tags::Output::Raw;
 # Object.
 my $tags = Tags::Output::Raw->new(
         'data_callback' => sub {
-                my $data_ar = shift;
+                my ($data_ar, $self) = @_;
                 foreach my $data (@{$data_ar}) {
                          $data = encode_utf8($data);
                 }
