@@ -4,6 +4,9 @@
  - Fix bugtracker.
  - Update copyright years.
 
+ [Tags::Output]
+ - Add $self argument to callbacks as second argument.
+
 0.10 2020-10-14T00:56:08+02:00
  [Common]
  - Add missing test messages.
